[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/MyTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Chat.gd" type="Script" id=2]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ChatBox" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_right = 992.0
margin_bottom = 545.0
theme = ExtResource( 1 )
bbcode_enabled = true

[node name="ChatMessage" type="Control" parent="."]
margin_top = 552.0
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )

[node name="Label" type="RichTextLabel" parent="ChatMessage"]
margin_right = 272.0
margin_bottom = 48.0
custom_constants/table_vseparation = 0
bbcode_enabled = true
bbcode_text = "[center]Mensagem"
text = "Mensagem"

[node name="Message" type="LineEdit" parent="ChatMessage"]
margin_left = 272.0
margin_right = 896.0
margin_bottom = 48.0
placeholder_text = "Digite sua mensagem aqui!!!!"

[node name="Send" type="Button" parent="ChatMessage"]
margin_left = 896.0
margin_right = 1024.0
margin_bottom = 48.0
text = "Enviar"

[connection signal="pressed" from="ChatMessage/Send" to="." method="_on_Send_pressed"]
